crates/vespera_macro/src/snapshots/vespera_macro__openapi_generator__tests__openapi_route_operation_metadata.snap
---
source: crates/vespera_macro/src/openapi_generator.rs
expression: "serde_json::to_string_pretty(&doc).unwrap()"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "Operation Metadata API",
    "version": "1.0.0"
  },
  "servers": [
    {
      "url": "http://localhost:3000"
    }
  ],
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "getUser",
        "tags": [
          "users"
        ],
        "summary": "Get a user",
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            }
          }
        },
        "deprecated": true
      }
    }
  },
  "tags": [
    {
      "name": "users"
    }
  ]
}
