crates/vespera_macro/src/snapshots/vespera_macro__openapi_generator__tests__openapi_security_schemes_and_route_security.snap
---
source: crates/vespera_macro/src/openapi_generator.rs
expression: "serde_json::to_string_pretty(&doc).unwrap()"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "Security API",
    "version": "1.0.0"
  },
  "servers": [
    {
      "url": "http://localhost:3000"
    }
  ],
  "paths": {
    "/secure": {
      "get": {
        "operationId": "secure_route",
        "tags": [
          "secure"
        ],
        "description": "A secured route",
        "responses": {
          "200": {
            "description": "Successful response",
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            }
          }
        },
        "security": [
          {
            "bearerAuth": []
          }
        ]
      }
    }
  },
  "components": {
    "securitySchemes": {
      "bearerAuth": {
        "type": "http",
        "description": "JWT bearer token",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      }
    }
  },
  "security": [
    {
      "bearerAuth": []
    }
  ],
  "tags": [
    {
      "name": "secure"
    }
  ]
}
